refactor #198: 익명 게시판 기능 코드 수정